# govuk-related-links-recommender

./: .dockerignore  .env-aws  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile-for-local-development  Dockerfile-ubuntu20  Gemfile  LICENCE  Makefile  README-airflow.md  README.md  Rakefile  concourse.yml  docker-compose.yml  docker-generate  docker-generate.sh  docker-setup  init-airflow.sh  monitor_related_links_process  poetry-install.sh  poetry-run.sh  provision_generation_machine  provision_ingestion_machine  provision_machine  pyproject.toml  pytest.ini  requirements-airflow.txt  requirements-docker.txt  requirements-original.txt  requirements.txt  run-manual.sh  run_all.py  run_link_generation  run_link_ingestion  setup-airflow.py  startup
.github/: dependabot.yml
.github/workflows/: ci.yml
dags/: hello-world.py  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
githooks/: pre-push
lib/: json_file_extractor.rb  related_links_excluder.rb  related_links_updater.rb
lib/tasks/: update_related_links.rake
models/: n2v.model  n2v_node_embeddings
mongo-seed/: Dockerfile  Dockerfile-mongosh  populate-db.sh
notebooks/: get_all_links.ipynb  user_data_input.ipynb
notebooks/weighted_links_ab_test/: get_all_links.ipynb  run-and-check-link-predictions.ipynb
spec/fixtures/: sample_exclusions.json  sample_extracted_links.json
spec/lib/: json_file_extractor_spec.rb  related_links_excluder_spec.rb  related_links_updater_spec.rb
src/: logging.conf  run_all.py
src/config/: node2vec-config.yml  (+4 more)
(+91 files in other folders)
