[tool.poetry]
name = "govuk-related-links-recommender"
version = "0.1.0"
description = "Tool for creating related links on gov.uk"
authors = ["GOV.UK Data Labs"]
license = "MIT"
packages = [
    { include = "src" },
]

#[[tool.poetry.source]]
#name = "piwheels"
#url = "https://www.piwheels.org/simple/"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "5.1.1"
html5lib = "1.0.1"
beautifulsoup4 = "4.7.1"
pandas = "0.24.2"
numpy = "1.16.4"
pymongo = "3.8.0"
tqdm = "4.32.2"
node2vec = "0.3.0"
gensim = "3.8.0"
networkx = "2.3"
google-cloud-core = "1.3.0"
google-auth = "1.6.3"
google-cloud-bigquery = "1.17.0"
pigeon-jupyter = "0.1.0"
flake8 = "3.7.8"
pytest = "5.0.1"
pytest-mongodb = "2.1.2"
setuptools="50.3.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"
